--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -99,6 +99,17 @@
 	author = {Jungwoo Shin and Chandra R. Bhat and Daehyun You and Venu M. Garikapati and Ram M. Pendyala}
 }
 
+@article{Shireman:2017,
+  title={Examining the effect of initialization strategies on the performance of Gaussian mixture modeling},
+  author={Shireman, Emilie and Steinley, Douglas and Brusco, Michael J},
+  journal={Behavior research methods},
+  volume={49},
+  number={1},
+  pages={282--293},
+  year={2017},
+  publisher={Springer}
+}
+
 @BOOK{Train:2009,
 	title        = {Discrete choice methods with simulation},
 	author       = {Train, Kenneth},
