Updated README file.

--- a/README.Rmd
+++ b/README.Rmd
@@ -22,13 +22,13 @@ knitr::opts_chunk$set(
 
 The R-package {ino} provides implementation of several initialization strategies for the numerical optimization of real-valued functions, in particular likelihood functions of statistical models.
 
-Please see the two vignettes for a manual and examples.
+Please see the vignettes for a manual and two example applications.
 
 ## Installation
 
 You can install the development version of {ino} from [GitHub](https://github.com/) with:
 
-``` r
+```{r, eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("loelschlaeger/ino")
 ```
